--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 img-cont">
-                    <img src="img/about-img.svg" alt="Gato">
+                    <img src="img/about-img.png" alt="Gato">
                 </div>
             </div>
         </section>
@@ -157,7 +157,7 @@
                 <div class="text">Juan Zolezzi <br> Santiago Guardo <br> Iván Rosales <br> Máximo Luciani</div>
             </div>
             <div class="social-footer">
-               <img src="/img/uade.svg" alt="">
+               <img src="/img/uade.png" alt="">
             </div>
         </div>
         <p class="text-center">Trabajo grupal - Diseño y Desarrollo Web <br> All rights reserved.</p>
