--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="text">Juan Zolezzi <br> Santiago Guardo <br> Iván Rosales <br> Máximo Luciani</div>
             </div>
             <div class="social-footer">
-               <img src="/img/uade.png" alt="">
+               <img src="img/uade.png" alt="">
             </div>
         </div>
         <p class="text-center">Trabajo grupal - Diseño y Desarrollo Web <br> All rights reserved.</p>
